--- a/src/css/universalToggle.css
+++ b/src/css/universalToggle.css
@@ -23,7 +23,7 @@
   width: 50px !important;
   height: 50px !important;
   padding: 8px !important;
-  border: 2px solid #000000 !important;
+  border: 2px solid #ffffff !important;
   border-radius: 50% !important;
   background: linear-gradient(145deg, #e66300, #d95500) !important;
   color: #ffffff !important;
@@ -32,11 +32,7 @@
   transition:
     transform 0.3s ease,
     box-shadow 0.3s ease !important;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2) !important;
-}
-
-.dark-mode .universal-toggle-button {
-  border-color: #ffffff !important;
+  box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.4) !important;
 }
 
 .universal-toggle-button:hover {
